--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: http://doar-e.github.io
 title: Diary of a reverse-engineer
 subtitle: Because we like to play with weird things.
 author: Axel Souchet, Jonathan Salwan, Jérémy Fetiveau
-simple_search: http://google.com/search
+simple_search: https://google.com/search
 description: On this blog you will find short posts describing some strange things we came across while reverse-engineering things. Basically, the purpose is to give you tips/tricks, custom scripts and ressources about a specific subject.
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
